--- a/src/main/resources/MailExpress_en.properties
+++ b/src/main/resources/MailExpress_en.properties
@@ -1,1 +1,11 @@
-folders.header=Folders
+folders_header=Folders
+new_message=New message
+reply=Reply
+reply_to_all=Reply to all
+send=Send
+delete=Delete
+new_folder=New folder
+rename=Rename
+subject=Subject
+sender=Sender
+send_date=Date
