--- a/mailexpress-ui/src/main/resources/MailExpress_en.properties
+++ b/mailexpress-ui/src/main/resources/MailExpress_en.properties
@@ -8,7 +8,17 @@ new_folder=New folder
 rename=Rename
 subject=Subject
 sender=Sender
+to=To
 send_date=Date
 no_messages=No messages
 mark_read=Mark read
 mark_unread=Mark unread
+application_title=Mail Express
+folder_name=Folder name
+save=Save
+forward=Forward
+delete_folder_confirm_question=Are you sure you want to delete selected folder?
+delete_message_confirm_question=Are you sure you want to delete selected message?
+yes=Yes
+no=No
+please_wait=Please wait...
