--- a/mailexpress-ui/src/main/resources/MailExpress_en.properties
+++ b/mailexpress-ui/src/main/resources/MailExpress_en.properties
@@ -9,6 +9,7 @@ rename=Rename
 subject=Subject
 sender=Sender
 to=To
+copy=Copy
 send_date=Date
 no_messages=No messages
 mark_read=Mark read
@@ -16,9 +17,12 @@ mark_unread=Mark unread
 application_title=Mail Express
 folder_name=Folder name
 save=Save
+cancel=Cancel
 forward=Forward
 delete_folder_confirm_question=Are you sure you want to delete selected folder?
 delete_message_confirm_question=Are you sure you want to delete selected message?
 yes=Yes
 no=No
 please_wait=Please wait...
+email_valid_msg=Values entered should be valid emails, e.g. mail@mail.com
+email_tip=Write emails divided by semicolon
