--- a/mailexpress-ui/src/main/resources/MailExpress_en.properties
+++ b/mailexpress-ui/src/main/resources/MailExpress_en.properties
@@ -26,3 +26,5 @@ no=No
 please_wait=Please wait...
 email_valid_msg=Values entered should be valid emails, e.g. mail@mail.com
 email_tip=Write emails divided by semicolon
+add_attach=Add file
+file_upload_fail=File upload failed
