--- a/mailexpress-ui/src/main/resources/MailExpress_en.properties
+++ b/mailexpress-ui/src/main/resources/MailExpress_en.properties
@@ -30,3 +30,6 @@ add_attach=Add file
 file_upload_fail=File upload failed
 has_attachment=Are any files attached
 is_read=Is message read
+clear=Clear
+clear_all=Clear All
+size_exceeded=File is too big
