--- a/mailexpress-ui/src/main/resources/MailExpress_en.properties
+++ b/mailexpress-ui/src/main/resources/MailExpress_en.properties
@@ -19,7 +19,8 @@ folder_name=Folder name
 save=Save
 cancel=Cancel
 forward=Forward
-delete_folder_confirm_question=Are you sure you want to delete selected folder?
+delete_folder_confirm_question=Are you sure you want to delete selected folder? All messages in folder will be \
+  deleted too.
 delete_message_confirm_question=Are you sure you want to delete selected message?
 yes=Yes
 no=No
