--- a/mailexpress-ui/src/main/resources/MailExpress_en.properties
+++ b/mailexpress-ui/src/main/resources/MailExpress_en.properties
@@ -17,11 +17,13 @@ mark_unread=Mark unread
 application_title=Mail Express
 folder_name=Folder name
 save=Save
+ok=OK
 cancel=Cancel
 forward=Forward
 delete_folder_confirm_question=Are you sure you want to delete selected folder? All messages in folder will be \
   deleted too.
 delete_message_confirm_question=Are you sure you want to delete selected message?
+move_message=Move message to other folder\:
 yes=Yes
 no=No
 please_wait=Please wait...
