--- a/mailexpress-ui/src/main/resources/MailExpress_en.properties
+++ b/mailexpress-ui/src/main/resources/MailExpress_en.properties
@@ -23,6 +23,7 @@ forward=Forward
 delete_folder_confirm_question=Are you sure you want to delete selected folder? All messages in folder will be \
   deleted too.
 delete_message_confirm_question=Are you sure you want to delete selected message?
+move=Move
 move_message=Move message to other folder\:
 yes=Yes
 no=No
