--- a/mailexpress-ui/src/main/resources/MailExpress_en.properties
+++ b/mailexpress-ui/src/main/resources/MailExpress_en.properties
@@ -37,3 +37,4 @@ is_read=Is message read
 clear=Clear
 clear_all=Clear All
 size_exceeded=File is too big
+send_receive=Send and receive all messages
