--- a/mailexpress-ui/src/main/resources/MailExpress_en.properties
+++ b/mailexpress-ui/src/main/resources/MailExpress_en.properties
@@ -22,9 +22,9 @@ cancel=Cancel
 forward=Forward
 delete_folder_confirm_question=Are you sure you want to delete selected folder? All messages in folder will be \
   deleted too.
-delete_message_confirm_question=Are you sure you want to delete selected message?
+delete_message_confirm_question=Are you sure you want to delete selected messages?
 move=Move
-move_message=Move message to other folder\:
+move_message=Move messages to other folder\:
 yes=Yes
 no=No
 please_wait=Please wait...
@@ -38,3 +38,4 @@ clear=Clear
 clear_all=Clear All
 size_exceeded=File is too big
 send_receive=Send and receive all messages
+attachments=Attachments
