--- a/mailexpress-ui/src/main/resources/MailExpress_en.properties
+++ b/mailexpress-ui/src/main/resources/MailExpress_en.properties
@@ -38,4 +38,4 @@ clear=Clear
 clear_all=Clear All
 size_exceeded=File is too big
 send_receive=Send and receive all messages
-attachments=Attachments
+attachments=Attachments\:
